fix the layout of the about page on smaller screens

--- a/MaterialsWall/Content/about.css
+++ b/MaterialsWall/Content/about.css
@@ -11,6 +11,8 @@ img.piccie {
     float: right;
     border: 1px solid #666;
     margin-top: 10px;
+    margin-left: 10px;
+    max-width: 25%;
 }
 
 .touchy {
